--- a/src/oInput/Input.css
+++ b/src/oInput/Input.css
@@ -8,9 +8,11 @@
     width: 100%;
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
+    font-family: 'Lato', sans-serif;
 }
 .input__label *, .input-file__label * {
     margin-bottom: 5px;
@@ -39,6 +41,7 @@
     font-size: 1.2rem;
     padding: 0 10px;
     width: 100%;
+    flex-basis: 100%;
     height: 2.5rem;
 }
 .input__field[type=file], .input-file__field[type=file] {
