--- a/src/components/oInput/Input.css
+++ b/src/components/oInput/Input.css
@@ -1,4 +1,4 @@
-.input__label {
+.ojsInput__label {
     width: 100%;
     position: relative;
     display: flex;
@@ -7,27 +7,27 @@
     justify-content: space-between;
     align-items: flex-end;
 }
-.input__label * {
+.ojsInput__label * {
     margin-bottom: 5px;
 }
-.input__label p {
+.ojsInput__label p {
     color: #4d4d4d;
     font-size: 1.4rem;
     font-weight: 700;
 }
-.input__label p a {
+.ojsInput__label p a {
     color: #39f;
 }
-.input__label p a:hover {
+.ojsInput__label p a:hover {
     color: #aad6ff;
 }
-.input__label span {
-    color: #39f;
-    font-size: 0.8rem;
+.ojsInput__label span {
+    color: #36a0c2;
+    font-size: 1rem;
     white-space: nowrap;
     margin-left: 1rem;
 }
-.input__field {
+.ojsInput__field {
     border: 1px solid #333;
     box-sizing: border-box;
     font-size: 1.2rem;
@@ -36,10 +36,10 @@
     flex-basis: 100%;
     height: 2.5rem;
 }
-.input__field[type=file] {
+.ojsInput__field[type=file] {
     padding: 0.3rem;
 }
-.input--invalid {
+.ojsInput--invalid {
     border: 1px solid #f00;
     box-shadow: 0 0 5px #f00;
 }
